--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,10 @@
 {
 
   "compilerOptions": {
+    "baseUrl": "./src",
+    "paths": {
+      "": ["", "src/*", "*.svg"]
+    },
     "allowImportingTsExtensions": true,
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
